styles/styles.css
.header-frame {
  position: fixed;
  top: 0;
  width: 100%;
}

.header-body ul li {
  list-style: none;
  display: inline;
  padding-left: 0px;
  padding-right: 10px;
  
}

.header-body a {
  text-decoration: none;
  font-family: Arial, sans-serif;
  font: 13px arial, sans-serif;
  color: #000000;
}






.header-right {
  float: right;
  padding-right: 10px;

}

.header-right img {
  height: 25px;
  width: 25px;
  vertical-align: middle;
}

.sign-in-button{
  border: 1px solid #4285f4;
  border-radius: 2px;
  background: #4387fd;
  width: 69px;
  height: 30px;
}

.sign-in-button a{
  font: 13px arial, sans-serif;
  font-weight: bold;
  color: white;
}






.center {
  margin: auto;
}

.button-frame {
  margin-left: 110px;


} 


  /* Design for buttons below the search bar */
.buttons-below-search {
    background-color: #f2f2f2;
    border: 1px solid #f2f2f2;
    border-radius: 4px;
    color: #5F6368;
    cursor: pointer;
    font-family: arial,sans-serif;
    font-size: 14px;
    padding: 0 16px;
    height: 36px;
    line-height: 27px;
    min-width: 54px;
    text-align: center;
    margin-top: 50px;
    margin-left: 10px;
  }

  img.google-logo {
    display: block;
    margin: 0 auto;
    padding-top: 109px;
    margin-top: 94px;
    width: 272px;
  }


.search-box-border {
    border: 1px solid #dfe1e5;
    display: block;
    position: relative;
    margin-top: 15px;
    top: 50%;
    left: 30%;
    height: 30px;
    width: 560px;
    border-radius: 40px;
    padding: 5px;
}

.search-box input{
  border: none;
  padding: 8px;
  width: 400px;


}


.search-btn img {
  color: #9AA0A6;
  height: 24px;
  width: 24px;
  float: left;
  margin-top: 3px;
  margin-left: 4px;
}

.microphone-btn img {
  height: 30px;
  width: 29px;
  float: right;
  margin-right: 2px;
}


.footer-frame {
  position: absolute;
  bottom: 0;
  width: 100%;
  
  border: 1px solid #dfe1e5;
  background-color: #f1f1f1;
  list-style-type: none;
  height: 20px;
  line-height: 15px;
  padding-bottom: 20px;
}

.footer-frame ul li {
  list-style: none;
  display: inline;
  padding-left: 0px;
  padding-right: 10px;
 
}


.footer-frame a {
  text-decoration: none;
  color: #5f6368;
  font-family: 12px, arial,sans-serif;
}

